kube/backend/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: backend
  labels:
    app: taqueria-bonjour
spec:
  selector:
    app: taqueria-bonjour
  type: NodePort
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
