kube/backend/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/issuer: letsencrypt-prod
    cert-manager.io/issuer-kind: ClusterIssuer
    field.cattle.io/description: Backend ingress for main personal website splash page
    nginx.ingress.kubernetes.io/rewrite-target: /$2
  name: backend
  namespace: taqueria-bonjour
  labels:
    app: taqueria-bonjour
spec:
  rules:
  - host: bonjour.paulynomial.com
    http:
      paths:
      - path: /api(/|$)(.*)
        pathType: Prefix
        backend:
          serviceName: backend
          servicePort: 8080
  - host: taqueriabonjour.com
    http:
      paths:
      - path: /api(/|$)(.*)
        pathType: Prefix
        backend:
          serviceName: backend
          servicePort: 8080
  tls:
  - hosts:
    - bonjour.paulynomial.com
    secretName: backend-ingress-prod-tls
